--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,8 +1,10 @@
 FROM alpine:latest
 # adding nignx 
 RUN apk update && apk add nginx
-## run nginx
-CMD ["nginx", "-g", "daemon off;"]
 # keep the container running as a daemon
+# creating the config file
+COPY nginx.conf /home
+COPY index.html /home
 
+CMD ["nginx", "-g", "daemon off;", "-c", "/home/nginx.conf"]
 
