--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,5 +1,13 @@
-# http {
-#     server {
-#         ssl_protocols TLSv1.3
-#     }
-# }
+events {
+    worker_connections  1024 ;
+}
+
+http {
+    server {
+        listen 80;
+        location  / {
+            root /home;
+            index index.html;
+            }
+    }
+}
