adding docker compose

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,10 +1,15 @@
 FROM alpine:latest
 # adding nignx 
 RUN apk update && apk add nginx
+WORKDIR /home
+
+
 # keep the container running as a daemon
 # creating the config file
-COPY nginx.conf /home
-COPY index.html /home
+# COPY ./conf/nginx.conf /home
+# COPY ./conf/index.html /home
+
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;", "-c", "/home/nginx.conf"]
 
