--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -11,3 +11,25 @@ http {
             }
     }
 }
+
+                                                        internet
+                                                           |
+                                                           |
+                                                      443  | 
+---------------------------------------------------------  | ---------
+|                                                          |         |
+|  ----------          ------------------            -------------   |
+| | container|   3306  |container       |   9000     | container |   |
+| | db       |  <--->  |wordpress + php |  <-------> | nginx     |   |
+| |__________|         |________________|            |___________|   |
+|     |                       |                   /                  |
+|_____|_______________________|_________________/_____________________
+      |                       |                /
+      |                       |               /
+      |                       |              /
+      |                       |            /
+     _______              _____________  /
+    |       |             |            |
+    |  db   |             | wordpress  |
+    |_______|             |____________|
+    volume                     volume
