half-ass mariadb-setup

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,1 +1,21 @@
 LOGIN=ren-nasr
+
+#mysql setyp 
+MYSQL_ROOT_PASSWORD=aweasome-password
+MYSQL_USER=not-so-awesome-user
+MYSQL_PASSWORD=another-awesome-password
+MYSQL_NAME=not-so-awesome-db
+MYSQL_HOST=ren-nasr-mysql
+
+
+# user 1
+
+WP_ADMIN_USER=ren-nasr
+WP_ADMIN_PWD=123456
+WP_ADMIN_EMAIL=ren-nasr@student.1337.ma
+
+# second user
+WP_USER=eval
+WP_USER_PWD=123456
+WP_USER_EMAIL=eval@student.1337
+
