web server functioning sweet

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,11 @@
 LOGIN=ren-nasr
 
 #mysql setyp 
-MYSQL_ROOT_PASSWORD=aweasome-password
-MYSQL_USER=not-so-awesome-user
-MYSQL_PASSWORD=another-awesome-password
-MYSQL_NAME=not-so-awesome-db
-MYSQL_HOST=ren-nasr-mysql
-
+MYSQL_ROOT_PASSWORD=awesome_password
+MYSQL_USER=awesome_user
+MYSQL_PASSWORD=another_awesome_password
+MYSQL_NAME=awesome_db
+MYSQL_HOST=aweasome_host
 
 # user 1
 
