--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,11 +2,18 @@ FROM debian:buster
 
 RUN apt-get update -y && apt-get upgrade -y  && apt-get install nginx openssl wget -y
 
+
+# installing the init system 
 RUN wget -O /usr/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.5/dumb-init_1.2.5_x86_64
 RUN chmod +x /usr/bin/dumb-init
+
+# creating a self-signed certificate
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/C=MO/L=KH/O=1337/OU=student/CN=ren-nasr.1337.ma"
 
+# copying our custom nginx config file
 COPY ./conf/custom-nginx.conf /etc/nginx/custom-nginx.conf
+
+# creating the folder for the website , (not necessary but it's a standard to have webpages in /var/www/html)
 RUN mkdir -p /var/www/html/
 
 #give the permission to the folder
@@ -19,5 +26,3 @@ EXPOSE 443
 ENTRYPOINT [ "/usr/bin/dumb-init", "--" ]
 
 CMD ["nginx", "-c", "/etc/nginx/custom-nginx.conf", "-g", "daemon off;"]
-
-
