--- a/srcs/.env
+++ b/srcs/.env
@@ -1,18 +1,18 @@
 LOGIN=ren-nasr
-
 #mysql setyp 
 MYSQL_ROOT_PASSWORD=awesome_password
 MYSQL_USER=awesome_user
 MYSQL_PASSWORD=another_awesome_password
 MYSQL_NAME=awesome_db
-MYSQL_HOST=aweasome_host
+# MYSQL_HOST=aweasome_host
 
 # user 1
 
 WP_ADMIN_USER=ren-nasr
 WP_ADMIN_PWD=123456
 WP_ADMIN_EMAIL=ren-nasr@student.1337.ma
-
+WP_SITE_TITLE=hey 👋
+WP_URL=ren-nasr.24.fr
 # second user
 WP_USER=eval
 WP_USER_PWD=123456
