--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,24 +4,24 @@ networks:
     driver: bridge
 
 services:
-  # reverse_proxy:
-  #   container_name: reverse_proxy
-  #   build:
-  #     context: ./requirements/nginx/
-  #     dockerfile: Dockerfile
-  #   image: reverse_proxy
-  #   ports:
-  #     - 443:443
-  #   networks:
-  #     - inception
-  #   restart: always
+  reverse_proxy:
+    container_name: reverse_proxy
+    build:
+      context: ./requirements/nginx/
+      dockerfile: Dockerfile
+    image: reverse_proxy
+    ports:
+      - 443:443
+    networks:
+      - inception
+    restart: always
 
   db:
     container_name: db
     build:
       context: ./requirements/mariadb/
       dockerfile: Dockerfile
-      args: 
+      args:
         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
@@ -34,10 +34,10 @@ services:
     volumes:
       - /tmp/ren-nasr/:/var/lib/mysql
       # - /home/ren-nasr/data/db/:/var/lib/mysql
-    # restart: always
-    
-
+    restart: always
   # wordpress:
   #   build: ./requirements/wordpress/
   #   networks:
-  #     - docker-network
+  #     - inception
+
+
