--- a/srcs/.env
+++ b/srcs/.env
@@ -18,8 +18,8 @@ WP_USER=eval
 WP_USER_PWD=123456
 WP_USER_EMAIL=eval@student.1337
 
-export MYSQL_ROOT_PASSWORD=awesome_password
-export MYSQL_USER=awesome_user
-export MYSQL_PASSWORD=another_awesome_password
-export MYSQL_NAME=awesome_db 
+# export MYSQL_ROOT_PASSWORD=awesome_password
+# export MYSQL_USER=awesome_user
+# export MYSQL_PASSWORD=another_awesome_password
+# export MYSQL_NAME=awesome_db 
 
