--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,47 +7,11 @@ ARG MYSQL_USER
 ARG MYSQL_PASSWORD
 
 RUN apt-get update -y && apt-get upgrade -y && apt-get install wget mariadb-server procps -y
-# we call mysql and not mariadb. because MariaDB
-# is a fork of MySQL, even though they are different the name of the
-# commands we invoke and folders we use are as if we were using MySQL
-
-# the folder "/var/run/mysqld" is created to store the socket file for the MySQL 
-# daemon. This is because the MySQL daemon needs to have a place to store its socket file, 
-# which is used by client programs to communicate with the daemon. The socket file is created in this folder,
-
-
-# give permision to socket to ensure that the MySQL server process has the necessary permissions to write
-# to the directory and create the necessary socket files for client-server communication.
-
-
-#The syntax 'something@something' is used to specify a MySQL user and their associated host
-#In MySQL, a user is identified by a combination of their username and the host they are connecting from.
-# so in this context root can connect only from localhost and username can connect from any host.
-# flush privileges is used to reload the grant tables and put into effect the changes we made.
-
 COPY ./tools/init.sh /tmp/init.sh
-# COPY ./tools/start.sh /tmp/start.sh 
-RUN chmod +x /tmp/init.sh 
-# RUN chmod +x /tmp/start.sh
+COPY ./tools/createdb.sql /tmp/createdb.sql
+RUN chmod +x /tmp/init.sh
 EXPOSE 3306
-
-# COPY ./conf/mariadb-server.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 RUN sed -i 's/^bind-address\s*=.*/bind-address=0.0.0.0/' /etc/mysql/mariadb.conf.d/50-server.cnf
-
 # RUN wget -O /usr/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.5/dumb-init_1.2.5_x86_64 && chmod +x /usr/bin/dumb-init
-
 ENTRYPOINT [ "sh", "/tmp/init.sh" ]
-# RUN service mysql start && mysql < /tmp/createdb.sql && rm -f /tmp/createdb.sql
-
 CMD [ "mysqld_safe" , "--verbose"]
-
-# RUN service mysql start \
-#     && mysql -u root -e "CREATE USER '$MYSQL_USER'@'%' IDENTIFIED BY '$MYSQL_PASSWORD'; \
-#     CREATE DATABASE IF NOT EXISTS $MYSQL_NAME;\
-#     GRANT ALL PRIVILEGES ON $MYSQL_NAME.* TO '$MYSQL_USER'@'%'; \
-#     ALTER USER 'root'@'localhost' IDENTIFIED BY '$MYSQL_ROOT_PASSWORD'; \
-#     FLUSH PRIVILEGES;" && service mysql stop 
-
-# CMD ["mysqld_safe", "--verbose"]
-
-
