adding wordpress config

--- a/srcs/.env
+++ b/srcs/.env
@@ -23,3 +23,6 @@ WP_USER_EMAIL=eval@student.1337
 # export MYSQL_PASSWORD=another_awesome_password
 # export MYSQL_NAME=awesome_db 
 
+# export WP_USER=eval
+# export WP_USER_PWD=123456
+# export WP_USER_EMAIL=eval@student.1337
