--- a/srcs/requirements/nginx/conf/custom-nginx.conf
+++ b/srcs/requirements/nginx/conf/custom-nginx.conf
@@ -20,9 +20,25 @@ server {
 
   ssl_protocols TLSv1.3;
 
-  index index.html;
-  root /var/www/html; 
+  index index.php index.html index.htm;
+  root /var/www/html;
 
+# The location directive defines a block of configuration that applies to a specific location, which is specified using a regular expression. In this case, the regular expression ~ [^/]\\.php(/|$) matches any request that ends in .php and is not preceded by a / character.
+
+	location ~ [^/]\\.php(/|$) {
+
+# The try_files directive attempts to serve the requested file, and if it does not exist, it will return a 404 error.
+        try_files $uri =404;
+
+#The fastcgi_pass directive passes the request to a FastCGI server for processing.
+        fastcgi_pass wordpress:9000;
+
+	# The include directive includes a file with FastCGI parameters.
+        include fastcgi_params;
+
+#The fastcgi_param directive sets a FastCGI parameter. The SCRIPT_FILENAME parameter specifies the path to the PHP script that should be executed.
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+  }
 }
 
-}
