--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,13 @@
 LOGIN=ren-nasr
-#mysql setyp 
+# mariadb setup
+
 MYSQL_ROOT_PASSWORD=awesome_password
 MYSQL_USER=awesome_user
 MYSQL_PASSWORD=another_awesome_password
 MYSQL_NAME=awesome_db
-# MYSQL_HOST=aweasome_host
+#wordpress setup
 
-# user 1
-
+# first user 
 WP_ADMIN_USER=ren-nasr
 WP_ADMIN_PWD=123456
 WP_ADMIN_EMAIL=ren-nasr@student.1337.ma
@@ -17,12 +17,3 @@ WP_URL=ren-nasr.24.fr
 WP_USER=eval
 WP_USER_PWD=123456
 WP_USER_EMAIL=eval@student.1337
-
-# export MYSQL_ROOT_PASSWORD=awesome_password
-# export MYSQL_USER=awesome_user
-# export MYSQL_PASSWORD=another_awesome_password
-# export MYSQL_NAME=awesome_db 
-
-# export WP_USER=eval
-# export WP_USER_PWD=123456
-# export WP_USER_EMAIL=eval@student.1337
