--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -63,11 +63,11 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device:  /home/ren-nasr/data/db/
+      device: /Users/ren-nasr/porn/data/db #/home/ren-nasr/data/db/
       o: bind
   wp_data:
     driver: local
     driver_opts:
       type: none
-      device: /home/ren-nasr/data/wp/
+      device: /Users/ren-nasr/porn/data/wp #/home/ren-nasr/data/wp/
       o: bind
