--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -55,7 +55,6 @@ services:
       - inception
     volumes:
       - wp_data:/var/www/html
-      # - /home/ren-nasr/data/wp/:/var/www/html
     restart: always
 
 volumes:
@@ -63,11 +62,11 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /Users/ren-nasr/porn/data/db #/home/ren-nasr/data/db/
+      device: /home/ren-nasr/data/db/
       o: bind
   wp_data:
     driver: local
     driver_opts:
       type: none
-      device: /Users/ren-nasr/porn/data/wp #/home/ren-nasr/data/wp/
+      device: /home/ren-nasr/data/wp/
       o: bind
