changing domain name

--- a/srcs/requirements/nginx/conf/custom-nginx.conf
+++ b/srcs/requirements/nginx/conf/custom-nginx.conf
@@ -11,7 +11,7 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
 
-  server_name ren-nasr.1337.ma www.ren-nasr.1337.ma;
+  server_name ren-nasr.42.fr wwww.ren-nasr.42.fr;
 
 
   ssl_certificate  /etc/ssl/certs/nginx-selfsigned.crt;
