--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:buster
 
-RUN apt-get update -y && apt-get upgrade -y  && apt-get install nginx openssl wget -y
+RUN apt-get update -y && apt-get upgrade -y  && apt-get install nginx openssl -y
 
 # creating a self-signed certificate
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/C=MO/L=KH/O=1337/OU=student/CN=ren-nasr.1337.ma"
@@ -14,7 +14,6 @@ RUN mkdir -p /var/www/html/
 #give the permission to the folder
 RUN chmod -R 755 /var/www/html/
 
-COPY ./tools/index.html /var/www/html/index.html
 
 EXPOSE 443
 
