--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -63,12 +63,11 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /Users/ren-nasr/porn/data/db
+      device: /home/ren-nasr/data/db/
       o: bind
   wp_data:
     driver: local
     driver_opts:
       type: none
-      device: /Users/ren-nasr/porn/data/wp
+      device: /home/ren-nasr/data/wp/
       o: bind
-      # device: /home/ren-nasr/data/wp/
