--- a/srcs/requirements/nginx/conf/custom-nginx.conf
+++ b/srcs/requirements/nginx/conf/custom-nginx.conf
@@ -20,14 +20,11 @@ server {
   ssl_protocols TLSv1.3;
 
   index index.php;
-  root /var/www/html;
-  # location / {
-  #   try_files $uri $uri/ /index.php$is_args$args;
-  # }
+  root /var/www/html; 
 location ~ \.php$ {
     try_files $uri =404;
     fastcgi_pass wordpress:9000;
-    # fastcgi_index index.php;
+    fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     include fastcgi_params;
 }
