--- a/srcs/requirements/nginx/conf/custom-nginx.conf
+++ b/srcs/requirements/nginx/conf/custom-nginx.conf
@@ -7,6 +7,7 @@ events {
 
 http {
 
+include /etc/nginx/mime.types;
 server {
   listen 443 ssl;
   listen [::]:443 ssl;
@@ -21,16 +22,14 @@ server {
 
   index index.php;
   root /var/www/html;
-  # location / {
-  #   try_files $uri $uri/ /index.php$is_args$args;
-  # }
+
 location ~ \.php$ {
     try_files $uri =404;
     fastcgi_pass wordpress:9000;
-    # fastcgi_index index.php;
+    fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     include fastcgi_params;
-}
-}
+  }
+ }
 }
 
